[tool.poetry]
name = "project-2-lisova-m25-555"
version = "0.1.0"
description = ""
authors = ["Olesya Lisova"]
readme = "README.md"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"